src/stylesheets/app.scss
/**
 * Application Styles
 */
.ol-map {
  width: 100%;
  height: 400px;
  border: 1px solid #E4E4E4;
}
#issue-form .ol-map {
  width: 100%;
  margin-bottom: 1em;
}

$breakpoint-tablet: 899px;
@media (max-width: $breakpoint-tablet) {
  .ol-map {
    height: 340px;
  }
}

.ol-control button {
  background-color: rgba(52, 73, 94, 0.8);
  height: 32px;
  width: 32px;
}
.ol-control button:hover {
  background-color: rgba(52, 73, 94, 1);
}

.ol-zoom button.ol-zoom-in,
.ol-zoom button.ol-zoom-out,
.ol-full-screen button.ol-full-screen-true,
.ol-full-screen button.ol-full-screen-false,
.ol-rotate button.ol-rotate-reset,
.ol-bar .ol-button button {
  font-size: 1.6em;
}

div.ol-full-screen {
  right: 3.0em;
}

div.ol-rotate {
  right: 5.5em;
}

div.ol-full-screen {
  right: 3.0em;
}

.ol-control.ol-bar.ol-top.ol-left, .ol-control.ol-bar.ol-top.ol-right {
  top: 5.2em;
}

.tabular .ol-layerswitcher label {
  font-weight: initial;
  float: initial;
  text-align: initial;
  margin-left: initial;
  width: initial;
  line-height: initial;
}

#admin-menu a.gtt {
  background-image: url(../images/map.png);
}

div.usermap h3 {
  background: url(../images/map.png) no-repeat 0% 50%;
  padding-left: 20px;
}

i[id^='icon_settings_tracker_'] {
  font-size: 1.5em;
  vertical-align: middle;
  width: 1.5em;
  text-align: center;
}

.ol-control.ol-layerswitcher-popup {
  top: 0.5em;
}

.ol-control button .material-icons {
  font-size: inherit;
}

/* JQuery UI styles */
.select-overflow {
  height: 300px;
}

.ui-selectmenu-menu .ui-menu.customicons li.ui-menu-item,
.ui-selectmenu-menu .ui-menu.customicons li.ui-menu-item div {
  display: inline;
  font-size: 1.5em;
}

.ui-selectmenu-menu .ui-menu.customicons .ui-menu-item .ui-icons {
  height: 24px;
  width: 24px;
  padding-right: 0.2em;
}

.ui-widget.ui-widget-content {
  max-width: 510px;
  padding: 0.5em;
}

.ui-dialog .ui-dialog-buttonpane button {
  height: inherit;
}

.ui-dialog .ui-dialog-content {
  padding: 0.5em 0 0 0;
}

.ui-dialog .ui-dialog-content textarea {
  width: 100%;
  height: 300px;
}

